--- a/package.json
+++ b/package.json
@@ -14,6 +14,15 @@
   },
   "homepage": "https://github.com/kimmk4369/youtube-clone#readme",
   "dependencies": {
+    "@babel/core": "^7.12.3",
+    "@babel/node": "^7.12.1",
+    "@babel/preset-env": "^7.12.1",
     "express": "^4.17.1"
+  },
+  "scripts": {
+    "start": "nodemon --exec babel-node index.js --delay 2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.5"
   }
 }
