--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "node-sass": "^4.10.0",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
-    "sass-loader": "^7.1.0",
-    "webpack": "^4.36.1",
+    "sass-loader": "^7.3.1",
+    "webpack": "^4.44.2",
     "webpack-cli": "^3.1.2"
   },
   "scripts": {
@@ -52,7 +52,9 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4.2.0",
+    "mini-css-extract-plugin": "^1.2.0",
     "nodemon": "^2.0.6",
+    "postcss": "^8.1.4",
     "prettier": "2.1.2",
     "webpack-cli": "^3.3.12"
   }
