--- a/package.json
+++ b/package.json
@@ -21,17 +21,25 @@
     "autoprefixer": "^9.8.6",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.18.3",
+    "connect-mongo": "^3.2.0",
     "cookie-parser": "^1.4.3",
     "css-loader": "^1.0.1",
     "dotenv": "^6.1.0",
     "express": "^4.16.4",
+    "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.15.0",
+    "i": "^0.3.6",
     "json-parse-better-errors": "^1.0.2",
     "mongoose": "^5.10.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
     "node-sass": "^4.10.0",
+    "npm": "^6.14.8",
+    "passport": "^0.4.0",
+    "passport-github": "^1.1.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^5.0.1",
     "postcss-loader": "^3.0.0",
     "pug": "^2.0.3",
     "sass-loader": "^7.3.1",
