--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-sass": "^4.10.0",
     "npm": "^6.14.8",
     "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
     "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^5.0.1",
@@ -49,7 +50,8 @@
   "scripts": {
     "dev:server": "nodemon --exec babel-node init.js --delay 2 --ignore 'scss' ",
     "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
-    "build:assets": "cross-env WEBPACK_ENV=production webpack"
+    "build:assets": "cross-env WEBPACK_ENV=production webpack",
+    "tunnel": "C:\\Users\\82102\\AppData\\Roaming\\npm\\node_modules\\ngrok\\bin\\ngrok.exe http 4000"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
