--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.1.5",
     "autoprefixer": "^9.8.6",
+    "aws-sdk": "^2.797.0",
     "axios": "^0.21.0",
     "babel-loader": "^8.1.0",
     "body-parser": "^1.18.3",
@@ -29,12 +30,14 @@
     "express": "^4.16.4",
     "express-session": "^1.17.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "get-blob-duration": "^1.1.2",
     "helmet": "^3.15.0",
     "i": "^0.3.6",
     "json-parse-better-errors": "^1.0.2",
     "mongoose": "^5.10.11",
     "morgan": "^1.9.1",
     "multer": "^1.4.1",
+    "multer-s3": "^2.9.0",
     "node-sass": "^4.10.0",
     "npm": "^6.14.8",
     "passport": "^0.4.0",
